fix collapsing when content height is more than the height of the page

--- a/components/bl-leafletMap-component/styles/index.less
+++ b/components/bl-leafletMap-component/styles/index.less
@@ -11,6 +11,7 @@
   height: @bl-customComponent-leafletMap-height;
   margin: @bl-customComponent-leafletMap-margin;
   position: relative;
+  flex-shrink: 0;
 
   .control {
     border: 2px solid rgba(0, 0, 0, 0.2);
